--- a/frontend/src/Home.css
+++ b/frontend/src/Home.css
@@ -1,7 +1,8 @@
 .homepage {
     margin: 0px;
     background-color: rgb(56, 55, 55);
-    height: 100vh;
+    min-height: 100vh;
+    height: fit-content;
     text-align: center;
 }
 
