--- a/frontend/src/regis.css
+++ b/frontend/src/regis.css
@@ -4,3 +4,23 @@
     min-height: 100vh;
     height: fit-content;
 }
+
+#searchbox {
+    padding: 30px;
+}
+
+p.regEn  {
+    margin: 0px;
+    padding: 0px;
+}
+
+.regisEntries {
+    background-color: rgb(185, 184, 184);
+    color: black;
+    height: fit-content;
+    padding : 10px;
+    margin : 20px;
+    width: 700px;
+    display: flex;
+    justify-content: center;
+}
